# cairn-ehr

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  mkdocs.yml
.github/workflows/: docs-check.yml  docs.yml
articles/: a-health-record-that-assumes-the-network-will-fail.md
crates/cairn-event/: Cargo.toml
crates/cairn-event/src/: demographics.rs  identity.rs  lib.rs
crates/cairn-node/: Cargo.toml
crates/cairn-node/src/: apply_proposal.rs  backup.rs  db.rs  fsio.rs  identity.rs  keystore.rs  lib.rs  localstate.rs  main.rs  medium.rs  pairing.rs  restore.rs  seal.rs  sync.rs  transport.rs
crates/cairn-node/tests/: admission.rs  apply_proposal.rs  attestation.rs  backup.rs  cert_binds_key.rs  cli_localstate.rs  demographics.rs  demographics_address.rs  demographics_fields.rs  demographics_names.rs  demographics_sex_gender.rs  federation.rs  floor_enforced.rs  genesis_hlc.rs  identity_linkage.rs  keystore_seal.rs  localstate.rs  match_veto.rs  pairing.rs  provision.rs  restore.rs  status.rs  sync_watermark.rs  transport.rs  trust_refresh.rs  twin_globalise.rs
crates/cairn-sync/src/: main.rs
db/: 001_envelope.sql  002_projection.sql  003_blobs.sql  004_actors.sql  005_submit.sql  006_recall.sql  007_node_federation.sql  008_surrogate_projection.sql  009_node_supersede_and_restore.sql  010_demographics.sql  011_demographics_fields.sql  012_demographics_names.sql  013_demographics_sex_gender.sql  014_demographics_address.sql  015_globalise_twin.sql  016_match_veto.sql  017_match_proposal.sql  018_identity_linkage.sql  019_apply_proposal.sql
db/bench/: b5_surrogate.sql  run_b5.sh
db/tests/: 004_actors_test.sql  005_submit_test.sql  007_node_federation_test.sql  008_surrogate_test.sql  009_node_supersede_test.sql
docs/: HANDOVER.md  ROADMAP.md  requirements.txt
docs/code_reviews/: 2026-07-02-comprehensive-review.md
docs/developers/: architecture-for-developers.md  codebase-tour.md  contributing-workflow.md  getting-started.md  glossary.md  index.md  repository-map.md
docs/ecosystem/: 0001-agent-and-messaging-plugins-kastellan-localmail.md  0002-cairn-advisor-reasoning-primitives.md  0003-reference-data-sourcing-medicines-and-terminologies.md  README.md
docs/essays/: a-health-record-that-assumes-the-network-will-fail.md  designing-a-fractal-ehr.md  index.md  sync-walkthrough.md
docs/planning/: ehr-sync-architecture-spec-v0.5.md  ehr-sync-architecture-spec-v0.6.md
docs/principles/: GOVERNANCE.md  STEWARDSHIP-OF-THE-NAME.md
docs/spec/: data-model.md  demographics.md  deployment.md  identity.md  index.md  language-substrate.md  open-questions.md  security.md  sync.md  technology.md  topology.md  vision.md
docs/spec/decisions/: README.md  (+34 more)
docs/spikes/: 0001-walking-skeleton-wan-sync-and-pi-cost.md  0002-advisory-actor-write-contract.md  0003-postgres-on-android-bionic-node.md  README.md
docs/stylesheets/: extra.css
extensions/cairn_pgx/: Cargo.toml  cairn_pgx.control
extensions/cairn_pgx/src/: lib.rs
matcher/: README.md  pyproject.toml
matcher/src/cairn_matcher/: __init__.py  agreement.py  comparators.py  orchestrator.py  records.py  scoring.py
matcher/src/cairn_matcher/eval/: __init__.py  __main__.py  blocking_eval.py  dataset.py  generate.py  generator.py  loader.py  metrics.py  report.py  scorer_eval.py
matcher/src/cairn_matcher/eval/fixtures/: gold_v1.json
matcher/src/cairn_matcher/pipeline/: __init__.py  adapter.py  banding.py  db.py  runner.py  sweep.py
matcher/tests/: conftest.py  test_adapter_dob.py  test_adapter_record.py  test_agreement.py  test_banding.py  test_candidate_generation.py  test_comparator_dob.py  test_comparator_identifier.py  test_comparator_name.py  test_comparators_string.py  test_eval_blocking.py  test_eval_cli.py  test_eval_dataset.py  test_eval_generate_cli.py  test_eval_generator.py  test_eval_generator_sync.py  test_eval_generator_volume.py  test_eval_gold.py  test_eval_metrics.py  test_eval_report.py  test_eval_scorer_driver.py  test_eval_truth.py  test_jaro_winkler.py  test_orchestrator.py  test_package.py  test_pipeline_e2e.py  test_pipeline_smoke.py  test_properties.py  test_records.py  test_runner_pairing.py  test_scoring.py  test_sweep.py
packaging/: README.md
packaging/crates/: Cargo.toml  README.md
packaging/crates/src/: lib.rs
packaging/npm/: README.md  index.js  package.json
packaging/pypi/: README.md  pyproject.toml
packaging/pypi/src/cairn_ehr/: __init__.py
poc/pg-android-kit/: .gitignore  01-stage-prefix.sh  02-build-shmem.sh  03-run-on-device.sh  04-build-extension.sh  05-run-extension-on-device.sh  README.md  cross-compiling-postgres-pgrx-on-android.md
poc/pg-android-kit/extension/: Cargo.toml  cairn_smoke--0.0.0.sql  cairn_smoke.control  pg_config-shim
poc/pg-android-kit/extension/src/: lib.rs
poc/replication-failover/: .gitignore  NOTES-FROM-CLAUDE.md  README.md  RUNBOOK.md  TWO-MACHINE-RUNBOOK.md  demo.env.example  pyproject.toml  schema.sql
poc/replication-failover/src/cairn_demo/: __init__.py  cli.py  config.py  db.py  events.py  hlc.py  projections.py  sync.py
poc/replication-failover/tests/: test_hlc.py  test_sync_integration.py
poc/walking-skeleton/: .gitignore  Cargo.toml  PI-RUNBOOK.md  README.md
poc/walking-skeleton/crates/cairn-event/: Cargo.toml
poc/walking-skeleton/crates/cairn-event/src/: lib.rs
poc/walking-skeleton/crates/cairn-sync/: Cargo.toml
poc/walking-skeleton/crates/cairn-sync/src/: main.rs
poc/walking-skeleton/crates/cairn_pgx/: Cargo.toml
poc/walking-skeleton/crates/cairn_pgx/.cargo/: config.toml
poc/walking-skeleton/crates/cairn_pgx/src/: lib.rs
poc/walking-skeleton/db/: 001_envelope.sql  003_blobs.sql
poc/walking-skeleton/db/tests/: 006_recall_test.sql
poc/walking-skeleton/harness/: agent_standin.py  bench_b.py  bench_blob.py  bet_a.py  pyproject.toml  spike_0002.py  wan_spike.py
poc/walking-skeleton/results/: betb-pi5-crypto.json  betb-pi5-full.json
scratch/ui-sketches/: easygp-prefetch-notes.md
web/: README.md  _headers  chart-example.html  chart.html  index.html  robots.txt  sitemap.xml  styles.css
(+46 files in other folders)
