[project]
name = "cairn-matcher"
version = "0.1.0"
description = "Cairn advisory patient-matching scoring core (piece B1): pure Fellegi–Sunter scoring over projected demographic records."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [{ name = "Horst Herb" }]
keywords = ["ehr", "record-linkage", "fellegi-sunter", "patient-matching"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Healthcare Industry",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = []

[project.urls]
Homepage = "https://cairn-ehr.org"
Repository = "https://github.com/cairn-ehr/cairn-ehr"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cairn_matcher"]

[project.optional-dependencies]
pipeline = ["psycopg[binary]>=3.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
