[package]
name = "cairn-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-event = { path = "../cairn-event" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
uuid = { version = "1", features = ["v7"] }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
# integration tests connect to a local Postgres via $CAIRN_TEST_PG
tempfile = "3"
