[package]
name = "cairn_pgx"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

# This crate is deliberately OUTSIDE the repo workspace (the root Cargo.toml excludes it:
# pgrx pins its own dependency graph). The empty [workspace] table makes that standalone
# status self-declared, so cargo stops walking up in search of a parent workspace —
# without it, a build from a nested checkout (e.g. a git worktree under .claude/worktrees/)
# walks past the checkout root and errors against whatever manifest sits above it.
[workspace]

[lib]
crate-type = ["cdylib", "lib"]

# NB: pgrx >= 0.13 embeds the SQL entity graph directly into the cdylib via a linker
# section (see `pg_magic_func!`), so the old `pgrx_embed` helper bin (and the
# `::pgrx::pgrx_embed!()` macro, removed in 0.18) is no longer needed and was deleted.

[features]
# Default to pg18: the federation node / clinical substrate targets PostgreSQL >= 18
# (spec §9), so the no-flag build should match the deployment target. pgrx 0.12.x
# predated PG18, which is why this crate moved to a pg18-capable pgrx.
default = ["pg18"]
pg18 = ["pgrx/pg18"]
# pg16 retained for the legacy local instance; build/install it with
# `--no-default-features --features pg16` (pgrx permits exactly one `pgNN` feature).
pg16 = ["pgrx/pg16"]
pg_test = []

[dependencies]
pgrx = "=0.18.1"
cairn-event = { path = "../../crates/cairn-event" }
serde_json = "1" # used by cairn_body (later task) in non-test code
hex = "0.4" # pgrx pg_test feature compiles the tests module as a lib, not #[cfg(test)], so hex must be a regular dep

[dev-dependencies]
pgrx-tests = "=0.18.1"

[profile.dev]
panic = "unwind"
[profile.release]
panic = "unwind"
opt-level = 3
