[package]
name = "cairn_pgx"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_cairn_pgx"
path = "src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg16 = ["pgrx/pg16"]
pg_test = []

[dependencies]
pgrx = "=0.12.9"
cairn-event = { path = "../cairn-event" }
serde_json = "1" # used by cairn_body (later task) in non-test code
hex = "0.4" # pgrx pg_test feature compiles the tests module as a lib, not #[cfg(test)], so hex must be a regular dep

[dev-dependencies]
pgrx-tests = "=0.12.9"

[profile.dev]
panic = "unwind"
[profile.release]
panic = "unwind"
opt-level = 3
